--- a/ProQuant/ProQuant/src/main/webapp/pages/StrategyPage.html
+++ b/ProQuant/ProQuant/src/main/webapp/pages/StrategyPage.html
@@ -253,7 +253,6 @@
                                     <select class="select-item">
                                         <option value="">日涨幅</option>
                                         <option value="">月涨幅</option>
-                                        <option value="">年涨幅</option>
                                     </select>
                                 </td>
                                 <td>
@@ -272,8 +271,8 @@
                                 <td>
                                     <select class="select-item">
                                         <option value="">当日</option>
+                                        <option value="">当周</option>
                                         <option value="">当月</option>
-                                        <option value="">当年</option>
                                     </select>
                                 </td>
                                 <td>
@@ -295,6 +294,22 @@
                     </div>
                 </div>
             </div>
+            <div class="param-holder">
+                <table>
+                    <thead>
+                    <th>总收益</th>
+                    <th>年化收益</th>
+                    <th>夏普比率</th>
+                    <th>最大回撤率</th>
+                    <th>Beta</th>
+                    <th>Alpha</th>
+
+                    </thead>
+                    <tbody>
+
+                    </tbody>
+                </table>
+            </div>
             <div class="left-and-right-holder">
                 <div class="left-part">
                     <h4>策略回测结果</h4>
@@ -302,8 +317,8 @@
                         <ul class="nav nav-tabs">
                             <li class="active"><a href="#">收益曲线</a></li>
                             <li><a href="#">收益周期</a></li>
-                            <li><a href="#">年化收益分布</a></li>
-                            <li><a href="#">--未定--</a></li>
+                            <!--<li><a href="#">年化收益分布</a></li>-->
+                            <!--<li><a href="#">&#45;&#45;未定&#45;&#45;</a></li>-->
                         </ul>
                     </div>
                     <div class="chart-holder"></div>
