--- a/ProQuant/ProQuant/src/main/webapp/pages/HomePage.html
+++ b/ProQuant/ProQuant/src/main/webapp/pages/HomePage.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <!--导航栏start-->
-<nav class="navbar navbar-default navbar-fixed-top" style="background-color: #407FCE;height: 51px">
+<nav class="navbar navbar-default navbar-fixed-top" style="height: 51px">
     <div class="container">
         <div class="navbar-header">
             <a class="navbar-brand" href="#">ProQuant</a>
