--- a/ProQuant/ProQuant/src/main/webapp/pages/HomePage.html
+++ b/ProQuant/ProQuant/src/main/webapp/pages/HomePage.html
@@ -8,17 +8,56 @@
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/animation.css">
+    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="../css/myCSS/nav_footerCSS.css">
     <script src="../js/jquery-3.2.1.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/header.js"></script>
     <script src="../js/animation.js"></script>
+
 </head>
 <body>
 <!--导航栏start-->
 <nav class="navbar navbar-default navbar-fixed-top" style="height: 51px">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">ProQuant</a>
+            <div>
+                <a class="navbar-brand" href="#">
+                    <svg style="display: inline-block;" version="1.1"
+                    xmlns="http://www.w3.org/2000/svg"
+                    x="0px" y="0px" width="25px" viewBox="0 0 48 34" enable-background="new 0 0 48 34" xml:space="preserve">
+                    <defs>
+                        <clipPath id="mask">
+                        <polygon transform="rotate(180 18 11)" points="10,15.2 13.5,10.9 23.2,20.8 35.7,7.9 35.7,0 10,0 "/>
+                        </clipPath>
+                     </defs>
+                    <g transform="rotate(180 18 11)" clip-path="url(#mask)">
+                      <rect x="0" y="0" width="7" height="14" fill="#f2f2f2">
+                        <animateTransform  attributeType="xml"
+                          attributeName="transform" type="scale"
+                          values="1,1; 1,1.5; 1,1"
+                          begin="0.4s" dur="0.8s" repeatCount="indefinite" />
+                      </rect>
+                      <rect x="9" y="0" width="7" height="19" fill="#f2f2f2">
+                        <animateTransform  attributeType="xml"
+                          attributeName="transform" type="scale"
+                          values="1,0.2; 1,1.2; 1,0.2"
+                          begin="0.3s" dur="0.8s" repeatCount="indefinite" />
+                      </rect>
+                      <rect x="18" y="0" width="8" height="14" fill="#f2f2f2">
+                        <animateTransform  attributeType="xml"
+                          attributeName="transform" type="scale"
+                          values="1,0.2; 1,1.5; 1,0.2"
+                          begin="0s" dur="0.8s" repeatCount="indefinite" />
+                      </rect>
+                    </g>
+
+                    <polygon fill="#E67E25" points="38.6,2 41.4,4.2 36.1,10.2 29.5,17 26.8,19.8 23.3,23.3 19.9,19.8 17.1,17 13.7,13.5 10.2,17.7
+                    0,30.2 10,20.8 10,34 16.9,34 16.9,22.2 19.7,25.1 19.7,34 26.7,34 26.7,25.3 29.5,22.5 29.5,34 36.4,34 36.4,15.5 44.1,7.1 46.4,9.7 48,0   "/>
+                </svg>
+                    <div style="display: inline-block;font-size: 25px">ProQuant</div>
+                </a>
+            </div>
         </div>
         <ul id="navigation" class="nav navbar-nav">
             <li><a href="#">首页</a></li>
@@ -32,25 +71,35 @@
                 <input id="searchInput" type="text" placeholder="搜索">
                 <button style="background-color: transparent;color: #1F4374;"><i class="fa fa-search" aria-hidden="true"></i></button>
             </li>
-            <li><button id="loginButton"><i class="fa fa-user-circle" aria-hidden="true"></i>未登录</button></li>
+            <li>
+                <button id="loginButton"><i class="fa fa-user-circle" aria-hidden="true"></i>未登录</button>
+            </li>
             <li>
                 <div class="dropdown" id="skin">
-                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" style="background-color: transparent;border: none">
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown"
+                            style="background-color: transparent;border: none">
                         <img src="../images/skin.png">
                     </button>
                     <ul class="dropdown-menu dropdown-menu-right">
-                        <!--<li><a href="#" style="background-color: #292C31"><span style="background-color: #222222;margin-bottom: -6px;opacity: 0.5;height: 30px;color: white">酷炫黑</span></a></li>-->
-                        <!--<li><a href="#">CSS</a></li>-->
-                        <!--<li><a href="#">JavaScript</a></li>-->
-                        <!--<li><a href="#">JQuery</a></li>-->
-                        <!--<li><a href="#">BootStrap</a></li>-->
-                        <!--<li><a href="#">FontAwesome</a></li>-->
-                        <li><button style="background-color: #292C31"><span>酷炫黑<i class="fa fa-check-circle" style="color: #B82525" aria-hidden="true"></i></span></button></li>
-                        <li><button style="background-color: #90C5E7"><span>淡蓝</span></button></li>
-                        <li><button style="background-color: #601F00"><span>棕色</span></button></li>
-                        <li><button style="background-color: #48A564"><span>清新绿</span></button></li>
-                        <li><button style="background-color: #ECC180"><span>土豪金</span></button></li>
-                        <li><button style="background-color: #EF99BC"><span>可爱粉</span></button></li>
+                        <li>
+                            <button style="background-color: #292C31"><span>酷炫黑<i class="fa fa-check-circle" style="color: #B82525" aria-hidden="true"></i></span>
+                            </button>
+                        </li>
+                        <li>
+                            <button style="background-color: #90C5E7"><span>淡蓝</span></button>
+                        </li>
+                        <li>
+                            <button style="background-color: #601F00"><span>棕色</span></button>
+                        </li>
+                        <li>
+                            <button style="background-color: #48A564"><span>清新绿</span></button>
+                        </li>
+                        <li>
+                            <button style="background-color: #ECC180"><span>土豪金</span></button>
+                        </li>
+                        <li>
+                            <button style="background-color: #EF99BC"><span>可爱粉</span></button>
+                        </li>
                     </ul>
                 </div>
             </li>
@@ -59,17 +108,108 @@
 </nav>
 <!--导航栏end-->
 
-<div class="container-fluid" style="height: 500px;">
-    <div class="row" style="margin-top: 100px;width: 100%">
-        <div class="col-sm-7" id="animation">
-            <p class="f">Made with love by <a target="_blank"  href="https://twitter.com/JeremBoo">@jeremboo</a></p>
-            <p class ="message">Drag the earth</p>
+<div class="container-fluid" style="height: 600px;background-color: #407FCE">
+    <div class="row" style="margin-top: 100px;width: 100%;text-align: center;padding: 150px">
+        <!--<div class="col-sm-7" id="animation">-->
+            <!--&lt;!&ndash;<canvas id="c" width="600" height="600" style="position: absolute;top: 100px;left: 0;top: 0"></canvas>&ndash;&gt;-->
+        <!--</div>-->
+        <!--<div class="col-sm-1"></div>-->
+        <!--<div class="col-sm-4" style="background-color:lavenderblush;">欢迎来到ProQuant</div>-->
+        <!--<div class="col-sm-1"></div>-->
+        <div>
+            <svg style="display: inline-block;" version="1.1"
+                    xmlns="http://www.w3.org/2000/svg"
+                    x="0px" y="0px" width="200px" viewBox="0 0 48 34" enable-background="new 0 0 48 34" xml:space="preserve">
+                    <defs>
+                        <clipPath id="mask">
+                        <polygon transform="rotate(180 18 11)" points="10,15.2 13.5,10.9 23.2,20.8 35.7,7.9 35.7,0 10,0 "/>
+                        </clipPath>
+                     </defs>
+                    <g transform="rotate(180 18 11)" clip-path="url(#mask)">
+                      <rect x="0" y="0" width="7" height="14" fill="#f2f2f2">
+                        <animateTransform  attributeType="xml"
+                          attributeName="transform" type="scale"
+                          values="1,1; 1,1.5; 1,1"
+                          begin="0.4s" dur="0.8s" repeatCount="indefinite" />
+                      </rect>
+                      <rect x="9" y="0" width="7" height="19" fill="#f2f2f2">
+                        <animateTransform  attributeType="xml"
+                          attributeName="transform" type="scale"
+                          values="1,0.2; 1,1.2; 1,0.2"
+                          begin="0.3s" dur="0.8s" repeatCount="indefinite" />
+                      </rect>
+                      <rect x="18" y="0" width="8" height="14" fill="#f2f2f2">
+                        <animateTransform  attributeType="xml"
+                          attributeName="transform" type="scale"
+                          values="1,0.2; 1,1.5; 1,0.2"
+                          begin="0s" dur="0.8s" repeatCount="indefinite" />
+                      </rect>
+                    </g>
+
+                    <polygon fill="#E67E25" points="38.6,2 41.4,4.2 36.1,10.2 29.5,17 26.8,19.8 23.3,23.3 19.9,19.8 17.1,17 13.7,13.5 10.2,17.7
+                    0,30.2 10,20.8 10,34 16.9,34 16.9,22.2 19.7,25.1 19.7,34 26.7,34 26.7,25.3 29.5,22.5 29.5,34 36.4,34 36.4,15.5 44.1,7.1 46.4,9.7 48,0   "/>
+            </svg>
+            <div class="homeTxt">欢迎来到ProQuant</div>
+            <div class="homeTxt">获取第一手股票资讯</div>
         </div>
-        <div class="col-sm-1"></div>
-        <div class="col-sm-4" style="background-color:lavenderblush;">欢迎来到ProQuant</div>
-        <div class="col-sm-1"></div>
     </div>
 </div>
+
+<!--功能简介start-->
+<div>
+    <div id="funcIntro" style="text-align: center">
+        <div class="intro">
+            <img src="../images/market.svg">
+            <div class="introTitle">大盘数据</div>
+            <div class="introTxt">获取最新的市场信息</div>
+        </div>
+        <div class="introGap"></div>
+        <div class="intro">
+            <img src="../images/strategy.svg">
+            <div class="introTitle">使用策略</div>
+            <div class="introTxt">最大化提升投资收益</div>
+        </div>
+        <div class="introGap"></div>
+        <div class="intro">
+            <img src="../images/create.svg">
+            <div class="introTitle">创建策略</div>
+            <div class="introTxt">自定义定制量化策略</div>
+        </div>
+        <div class="introGap"></div>
+        <div class="intro">
+            <img src="../images/compare.svg">
+            <div class="introTitle">股票对比</div>
+            <div class="introTxt">全方位比较股票信息</div>
+        </div>
+    </div>
+</div>
+<!--功能简介end-->
+
+<!--页脚start-->
+<div class="footer">
+    <div class="left-footer">
+        <div>
+            <h2>关于ProQuant</h2>
+            <br>
+            <p>ProQuant是一款基于提供股票市场情况展示，个股信息展示，股票各项指标预测功能于一体的多功能股票查询、
+                <br>分析的软件。</p>
+        </div>
+    </div>
+    <div class="right-footer">
+        <div>
+            <h2>关于我们</h2>
+            <br>
+            <p></p>
+        </div>
+        <div>
+            <a href="../images/myWEIBO."><img src="../images/weibo.png" alt="微博"></a>
+            <a href=""><img src="../images/weixin.png" alt="微信"></a>
+            <a href=""><img src="../images/qq.png" alt="QQ"></a>
+
+        </div>
+    </div>
+</div>
+<!--页脚end-->
 
 
 <!--登录弹出框start-->
