--- a/ProQuant/ProQuant/src/main/webapp/pages/StockInfo.html
+++ b/ProQuant/ProQuant/src/main/webapp/pages/StockInfo.html
@@ -5,9 +5,9 @@
     <title>个股信息</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/font-awesome.min.css">
+    <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/stockInfo.css">
-    <link rel="stylesheet" href="../css/reset.css">
     <script src="../js/jquery-3.2.1.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/header.js"></script>
@@ -39,12 +39,6 @@
                         <img src="../images/skin.png">
                     </button>
                     <ul class="dropdown-menu dropdown-menu-right">
-                        <!--<li><a href="#" style="background-color: #292C31"><span style="background-color: #222222;margin-bottom: -6px;opacity: 0.5;height: 30px;color: white">酷炫黑</span></a></li>-->
-                        <!--<li><a href="#">CSS</a></li>-->
-                        <!--<li><a href="#">JavaScript</a></li>-->
-                        <!--<li><a href="#">JQuery</a></li>-->
-                        <!--<li><a href="#">BootStrap</a></li>-->
-                        <!--<li><a href="#">FontAwesome</a></li>-->
                         <li><button style="background-color: #292C31"><span>酷炫黑<i class="fa fa-check-circle" style="color: #B82525" aria-hidden="true"></i></span></button></li>
                         <li><button style="background-color: #90C5E7"><span>淡蓝</span></button></li>
                         <li><button style="background-color: #601F00"><span>棕色</span></button></li>
@@ -124,10 +118,10 @@
                     <div id="kLine">
                         <div>
                             <ul>
-                                <li><a>分时</a></li>
-                                <li><a class="blueBackground">日K</a></li>
-                                <li><a>周K</a></li>
-                                <li><a>月K</a></li>
+                                <li id="time"><a>分时</a></li>
+                                <li id="dayLine" class="blueBackground"><a>日K</a></li>
+                                <li id="weekLine"><a>周K</a></li>
+                                <li id="monthLine"><a>月K</a></li>
                             </ul>
                         </div>
                         <!--k线图容器-->
@@ -449,8 +443,8 @@
 <!--滑动提示框end-->
 
 <script type="text/javascript" src="../charts/kLineChart.js"></script>
-<script type="text/javascript" src="../js/stockInfo.js"></script>
 <script type="text/javascript" src="../charts/meterChart.js"></script>
 <script type="text/javascript" src="../charts/radarChart.js"></script>
+<script type="text/javascript" src="../js/stockInfo.js"></script>
 </body>
 </html>
