--- a/ProQuant/ProQuant/src/main/webapp/pages/StrategyPage.html
+++ b/ProQuant/ProQuant/src/main/webapp/pages/StrategyPage.html
@@ -8,8 +8,11 @@
     <link href="../css/header.css" rel="stylesheet">
     <link href="../css/myCSS/StrategyPageCSS.css" rel="stylesheet">
     <link href="../css/myCSS/nav_footerCSS.css" rel="stylesheet">
-    <script src="../js/bootstrap.min.js"></script>
     <script src="../js/jquery-3.2.1.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/header.js" type="text/javascript"></script>
+    <script src="../js/jquery.scrollTo.js" type="text/javascript"></script>
+    <script src="../js/myJS/StrategyJS.js" type="text/javascript"></script>
 </head>
 <body>
     <!--导航栏start-->
@@ -40,14 +43,14 @@
             <p>这里有最精准的策略，供您购买前对趋势的预测。</p>
         </div>
         <div class="pic-holder">
-            <input type="button" value="使用策略">
-            <input type="button" value="制定策略">
+            <input type="button" value="使用策略" id="use-strategy-button">
+            <input type="button" value="制定策略" id="make-strategy-button">
         </div>
     </div>
 
     <div class="three-strategy">
         <div class="strategy-one">
-            <h1>第一策略</h1>
+            <h1>BP神经网络算法</h1>
             <!--content-holder是策略浮块中间的部分-->
             <div class="content_holder">
                 <h4>趋势拟合指标：</h4>
@@ -68,11 +71,11 @@
 
             <!--btn-holder是放置按钮的地方-->
             <div class="btn_holder">
-                <input type="button" value="使用策略">
+                <input type="button" value="使用策略" id="use-strategy-button-one">
             </div>
         </div>
         <div class="strategy-two">
-            <h1>第二策略</h1>
+            <h1>动量交易算法</h1>
             <!--content-holder是策略浮块中间的部分-->
             <div class="content_holder">
                 <br>
@@ -83,11 +86,11 @@
                 </div>
             </div>
             <div class="btn_holder">
-                <input type="button" value="使用策略">
+                <input type="button" value="使用策略" id="use-strategy-button-two">
             </div>
         </div>
         <div class="strategy-three">
-            <h1>第三策略</h1>
+            <h1>均值回归算法</h1>
             <!--content-holder是策略浮块中间的部分-->
             <div class="content_holder">
                 <br>
@@ -98,21 +101,29 @@
                 </div>
             </div>
             <div class="btn_holder">
-                <input type="button" value="使用策略">
+                <input type="button" value="使用策略" id="use-strategy-button-three">
             </div>
         </div>
     </div>
     <!--制定策略和使用策略的部分-->
-    <div class="main-body">
+    <div class="main-body" id="main-body">
         <div class="bootstrap-tab">
             <ul class="nav nav-tabs">
-                <li class="active"><a href="#">使用策略</a></li>
-                <li><a href="#">制定策略</a></li>
+                <li class="active"><a id="use-strategy-tab" style="cursor: pointer;">使用策略</a></li>
+                <li><a id="make-strategy-tab" style="cursor: pointer;">制定策略</a></li>
             </ul>
         </div>
         <div class="parent-holder">
             <div id="use-strategy-model">
                 <div class="m-input-section">
+                    <div class="strategy-type-holder m-input-section-cell">
+                        <h4>策略回测算法</h4>
+                        <select class="select-item" id="algorithm-list">
+                            <option value="BP神经网络算法">BP神经网络算法</option>
+                            <option value="动量交易算法">动量交易算法</option>
+                            <option value="均值回归算法">均值回归算法</option>
+                        </select>
+                    </div>
                     <div class="h-holder">
                         <h2>回测条件</h2>
                     </div>
@@ -157,12 +168,13 @@
                         <label>结束日期<input  class="end-datepicker" type="date" placeholder="结束日期"></label>
                     </div>
                     <div class="m-input-section-cell">
-                        <button>开始回测</button>
+                        <button id="startButtonOne">开始回测</button>
                     </div>
                 </div>
 
             </div>
             <!--标签页下面左边的放置图表的位置-->
+            <!--第一个DIV是输入的区域-->
             <div id="make-strategy-model">
                 <div class="m-input-section">
                     <div class="h-holder addstyle">
@@ -290,27 +302,49 @@
                         </table>
                     </div>
                     <div class="make-strategy-button">
-                        <button>开始回测</button>
+                        <button id="startButtonTwo">开始回测</button>
                     </div>
                 </div>
             </div>
-            <div class="param-holder">
-                <table>
-                    <thead>
-                    <th>总收益</th>
-                    <th>年化收益</th>
-                    <th>夏普比率</th>
-                    <th>最大回撤率</th>
-                    <th>Beta</th>
-                    <th>Alpha</th>
-
-                    </thead>
-                    <tbody>
-
-                    </tbody>
-                </table>
-            </div>
             <div class="left-and-right-holder">
+                <div class="param-holder">
+                    <div>
+                        <h4>收益统计</h4>
+                    </div>
+                    <table>
+                        <thead>
+                        <tr>
+                            <th>投资组合</th>
+                            <th>总收益</th>
+                            <th>年化收益</th>
+                            <th>夏普比率</th>
+                            <th>最大回撤率</th>
+                            <th>Beta</th>
+                            <th>Alpha</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>本策略</td>
+                            <td>1766.05%</td>
+                            <td>58.15%</td>
+                            <td>2.56</td>
+                            <td>22.13%</td>
+                            <td>0.31</td>
+                            <td>53.81%</td>
+                        </tr>
+                        <tr>
+                            <td>基准策略</td>
+                            <td>1766.05%</td>
+                            <td>58.15%</td>
+                            <td>2.56</td>
+                            <td>22.13%</td>
+                            <td>0.31</td>
+                            <td>53.81%</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
                 <div class="left-part">
                     <h4>策略回测结果</h4>
                     <div class="bootstrap-tab">
@@ -351,7 +385,7 @@
                 <p></p>
             </div>
             <div>
-                <a href="../images/myWEIBO."><img src="../images/weibo.png" alt="微博"></a>
+                <a href=""><img src="../images/weibo.png" alt="微博"></a>
                 <a href=""><img src="../images/weixin.png" alt="微信"></a>
                 <a href=""><img src="../images/qq.png" alt="QQ"></a>
 
