--- a/ProQuant/ProQuant/src/main/webapp/pages/UserCenterPage2.html
+++ b/ProQuant/ProQuant/src/main/webapp/pages/UserCenterPage2.html
@@ -80,7 +80,7 @@
                            <td>--</td>
                            <td>--</td>
                            <td>
-                               <a href="javascript:void(0);" title="删除自选">
+                               <a href="javascript:void(0);" title="deleteButton">
                                    <img src="../images/delete.png">
                                </a>
                            </td>
@@ -88,7 +88,7 @@
                        <tr>
                            <td>1</td>
                            <td>
-                               <a href="javascript:void(0);">000000</a>
+                               <a href="javascript:void(0);">000001</a>
                            </td>
                            <td>
                                <a href="javascript:void(0);">测试股</a>
@@ -97,7 +97,7 @@
                            <td>--</td>
                            <td>--</td>
                            <td>
-                               <a href="javascript:void(0);" title="删除自选">
+                               <a href="javascript:void(0);" title="deleteButton">
                                    <img src="../images/delete.png">
                                </a>
                            </td>
@@ -105,7 +105,7 @@
                        <tr>
                            <td>1</td>
                            <td>
-                               <a href="javascript:void(0);">000000</a>
+                               <a href="javascript:void(0);">000002</a>
                            </td>
                            <td>
                                <a href="javascript:void(0);">测试股</a>
@@ -114,7 +114,7 @@
                            <td>--</td>
                            <td>--</td>
                            <td>
-                               <a href="javascript:void(0);" title="删除自选">
+                               <a href="javascript:void(0);" title="deleteButton">
                                    <img src="../images/delete.png">
                                </a>
                            </td>
@@ -122,7 +122,7 @@
                        <tr>
                            <td>1</td>
                            <td>
-                               <a href="javascript:void(0);">000000</a>
+                               <a href="javascript:void(0);">000003</a>
                            </td>
                            <td>
                                <a href="javascript:void(0);">测试股</a>
@@ -131,7 +131,7 @@
                            <td>--</td>
                            <td>--</td>
                            <td>
-                               <a href="javascript:void(0);" title="删除自选">
+                               <a href="javascript:void(0);" title="deleteButton">
                                    <img src="../images/delete.png">
                                </a>
                            </td>
@@ -139,7 +139,7 @@
                        <tr>
                            <td>1</td>
                            <td>
-                               <a href="javascript:void(0);">000000</a>
+                               <a href="javascript:void(0);">000004</a>
                            </td>
                            <td>
                                <a href="javascript:void(0);">测试股</a>
@@ -148,7 +148,7 @@
                            <td>--</td>
                            <td>--</td>
                            <td>
-                               <a href="javascript:void(0);" title="删除自选">
+                               <a href="javascript:void(0);" title="deleteButton">
                                    <img src="../images/delete.png">
                                </a>
                            </td>
@@ -156,7 +156,7 @@
                        <tr>
                            <td>1</td>
                            <td>
-                               <a href="javascript:void(0);">000000</a>
+                               <a href="javascript:void(0);">000005</a>
                            </td>
                            <td>
                                <a href="javascript:void(0);">测试股</a>
@@ -165,7 +165,7 @@
                            <td>--</td>
                            <td>--</td>
                            <td>
-                               <a href="javascript:void(0);" title="删除自选">
+                               <a href="javascript:void(0);" title="deleteButton">
                                    <img src="../images/delete.png">
                                </a>
                            </td>
@@ -173,7 +173,7 @@
                        <tr>
                            <td>1</td>
                            <td>
-                               <a href="javascript:void(0);">000000</a>
+                               <a href="javascript:void(0);">000006</a>
                            </td>
                            <td>
                                <a href="javascript:void(0);">测试股</a>
@@ -182,7 +182,7 @@
                            <td>--</td>
                            <td>--</td>
                            <td>
-                               <a href="javascript:void(0);" title="删除自选">
+                               <a href="javascript:void(0);" title="deleteButton">
                                    <img src="../images/delete.png">
                                </a>
                            </td>
@@ -190,7 +190,7 @@
                        <tr>
                            <td>1</td>
                            <td>
-                               <a href="javascript:void(0);">000000</a>
+                               <a href="javascript:void(0);">000007</a>
                            </td>
                            <td>
                                <a href="javascript:void(0);">测试股</a>
@@ -199,7 +199,7 @@
                            <td>--</td>
                            <td>--</td>
                            <td>
-                               <a href="javascript:void(0);" title="删除自选">
+                               <a href="javascript:void(0);" title="deleteButton">
                                    <img src="../images/delete.png">
                                </a>
                            </td>
@@ -207,7 +207,7 @@
                        <tr>
                            <td>1</td>
                            <td>
-                               <a href="javascript:void(0);">000000</a>
+                               <a href="javascript:void(0);">000008</a>
                            </td>
                            <td>
                                <a href="javascript:void(0);">测试股</a>
@@ -216,7 +216,7 @@
                            <td>--</td>
                            <td>--</td>
                            <td>
-                               <a href="javascript:void(0);" title="删除自选">
+                               <a href="javascript:void(0);" title="deleteButton">
                                    <img src="../images/delete.png">
                                </a>
                            </td>
@@ -224,7 +224,7 @@
                        <tr>
                            <td>1</td>
                            <td>
-                               <a href="javascript:void(0);">000000</a>
+                               <a href="javascript:void(0);">000009</a>
                            </td>
                            <td>
                                <a href="javascript:void(0);">测试股</a>
@@ -233,7 +233,7 @@
                            <td>--</td>
                            <td>--</td>
                            <td>
-                               <a href="javascript:void(0);" title="删除自选">
+                               <a href="javascript:void(0);" title="deleteButton">
                                    <img src="../images/delete.png">
                                </a>
                            </td>
@@ -275,7 +275,7 @@
                                     </a>
                                 </td>
                                 <td>
-                                    <a href="javascript:void(0);" title="展开">
+                                    <a href="javascript:void(0);" title="deleteButton">
                                         <img src="../images/delete.png">
                                     </a>
                                 </td>
