用户中心界面新增账户部分

--- a/ProQuant/ProQuant/src/main/webapp/pages/UserCenterPage2.html
+++ b/ProQuant/ProQuant/src/main/webapp/pages/UserCenterPage2.html
@@ -97,11 +97,127 @@
                         <table>
                             <thead>
                             <tr>
-                                <th></th>
+                                <th>股票名称</th>
+                                <th>买入时间</th>
+                                <th>卖出时间</th>
+                                <th>买入数量</th>
+                                <th>总盈亏</th>
+                                <th>今日盈亏</th>
                             </tr>
                             </thead>
                             <tbody>
-                            <tr></tr>
+                            <tr>
+                                <td>阿里巴巴</td>
+                                <td>2017/05/25</td>
+                                <td>----/--/--</td>
+                                <td>1000</td>
+                                <td>10%</td>
+                                <td>1.2%</td>
+                            </tr>
+                            <tr>
+                                <td>百度</td>
+                                <td>2017/05/25</td>
+                                <td>----/--/--</td>
+                                <td>1000</td>
+                                <td>10%</td>
+                                <td>1.2%</td>
+                            </tr>
+                            <tr>
+                                <td>腾讯</td>
+                                <td>2017/05/25</td>
+                                <td>----/--/--</td>
+                                <td>1000</td>
+                                <td>10%</td>
+                                <td>1.2%</td>
+                            </tr>
+                            <tr>
+                                <td>谷歌</td>
+                                <td>2017/05/25</td>
+                                <td>----/--/--</td>
+                                <td>1000</td>
+                                <td>10%</td>
+                                <td>1.2%</td>
+                            </tr>
+                            <tr>
+                                <td>苹果</td>
+                                <td>2017/05/25</td>
+                                <td>----/--/--</td>
+                                <td>1000</td>
+                                <td>10%</td>
+                                <td>1.2%</td>
+                            </tr>
+                            <tr>
+                                <td>亚马逊</td>
+                                <td>2017/05/25</td>
+                                <td>----/--/--</td>
+                                <td>1000</td>
+                                <td>10%</td>
+                                <td>1.2%</td>
+                            </tr>
+                            <tr>
+                                <td>Facebook</td>
+                                <td>2017/05/25</td>
+                                <td>----/--/--</td>
+                                <td>1000</td>
+                                <td>10%</td>
+                                <td>1.2%</td>
+                            </tr>
+                            <tr>
+                                <td>IBM</td>
+                                <td>2017/05/25</td>
+                                <td>----/--/--</td>
+                                <td>1000</td>
+                                <td>10%</td>
+                                <td>1.2%</td>
+                            </tr>
+                            <tr>
+                                <td>三星</td>
+                                <td>2017/05/25</td>
+                                <td>----/--/--</td>
+                                <td>1000</td>
+                                <td>10%</td>
+                                <td>1.2%</td>
+                            </tr>
+                            <tr>
+                                <td>小米</td>
+                                <td>2017/05/25</td>
+                                <td>----/--/--</td>
+                                <td>1000</td>
+                                <td>10%</td>
+                                <td>1.2%</td>
+                            </tr>
+                            <tr>
+                                <td>华为</td>
+                                <td>2017/05/25</td>
+                                <td>----/--/--</td>
+                                <td>1000</td>
+                                <td>10%</td>
+                                <td>1.2%</td>
+                            </tr>
+                            <tr>
+                                <td>华为</td>
+                                <td>2017/05/25</td>
+                                <td>----/--/--</td>
+                                <td>1000</td>
+                                <td>10%</td>
+                                <td>1.2%</td>
+                            </tr>
+                            <tr>
+                                <td>华为</td>
+                                <td>2017/05/25</td>
+                                <td>----/--/--</td>
+                                <td>1000</td>
+                                <td>10%</td>
+                                <td>1.2%</td>
+                            </tr>
+                            <tr>
+                                <td>华为</td>
+                                <td>2017/05/25</td>
+                                <td>----/--/--</td>
+                                <td>1000</td>
+                                <td>10%</td>
+                                <td>1.2%</td>
+                            </tr>
                             </tbody>
                         </table>
                     </div>
