登录框修改

--- a/ProQuant/ProQuant/src/main/webapp/pages/StockCompare.html
+++ b/ProQuant/ProQuant/src/main/webapp/pages/StockCompare.html
@@ -2,19 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>股票对比</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/font-awesome.min.css">
-    <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/animation.css">
-    <link rel="stylesheet" href="../css/home.css">
-    <link rel="stylesheet" href="../css/myCSS/nav_footerCSS.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/stockCompare.css">
     <script src="../js/jquery-3.2.1.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/header.js"></script>
-    <script src="../js/animation.js"></script>
-
+    <script src="../js/echarts.min.js"></script>
 </head>
 <body>
 <!--导航栏start-->
@@ -108,109 +105,57 @@
 </nav>
 <!--导航栏end-->
 
-<div class="container-fluid" style="height: 600px;background-color: #407FCE">
-    <div class="row" style="margin-top: 100px;width: 100%;text-align: center;padding: 150px">
-        <!--<div class="col-sm-7" id="animation">-->
-            <!--&lt;!&ndash;<canvas id="c" width="600" height="600" style="position: absolute;top: 100px;left: 0;top: 0"></canvas>&ndash;&gt;-->
-        <!--</div>-->
-        <!--<div class="col-sm-1"></div>-->
-        <!--<div class="col-sm-4" style="background-color:lavenderblush;">欢迎来到ProQuant</div>-->
-        <!--<div class="col-sm-1"></div>-->
-        <div>
-            <svg style="display: inline-block;" version="1.1"
-                    xmlns="http://www.w3.org/2000/svg"
-                    x="0px" y="0px" width="200px" viewBox="0 0 48 34" enable-background="new 0 0 48 34" xml:space="preserve">
-                    <defs>
-                        <clipPath id="mask">
-                        <polygon transform="rotate(180 18 11)" points="10,15.2 13.5,10.9 23.2,20.8 35.7,7.9 35.7,0 10,0 "/>
-                        </clipPath>
-                     </defs>
-                    <g transform="rotate(180 18 11)" clip-path="url(#mask)">
-                      <rect x="0" y="0" width="7" height="14" fill="#f2f2f2">
-                        <animateTransform  attributeType="xml"
-                          attributeName="transform" type="scale"
-                          values="1,1; 1,1.5; 1,1"
-                          begin="0.4s" dur="0.8s" repeatCount="indefinite" />
-                      </rect>
-                      <rect x="9" y="0" width="7" height="19" fill="#f2f2f2">
-                        <animateTransform  attributeType="xml"
-                          attributeName="transform" type="scale"
-                          values="1,0.2; 1,1.2; 1,0.2"
-                          begin="0.3s" dur="0.8s" repeatCount="indefinite" />
-                      </rect>
-                      <rect x="18" y="0" width="8" height="14" fill="#f2f2f2">
-                        <animateTransform  attributeType="xml"
-                          attributeName="transform" type="scale"
-                          values="1,0.2; 1,1.5; 1,0.2"
-                          begin="0s" dur="0.8s" repeatCount="indefinite" />
-                      </rect>
-                    </g>
-
-                    <polygon fill="#E67E25" points="38.6,2 41.4,4.2 36.1,10.2 29.5,17 26.8,19.8 23.3,23.3 19.9,19.8 17.1,17 13.7,13.5 10.2,17.7
-                    0,30.2 10,20.8 10,34 16.9,34 16.9,22.2 19.7,25.1 19.7,34 26.7,34 26.7,25.3 29.5,22.5 29.5,34 36.4,34 36.4,15.5 44.1,7.1 46.4,9.7 48,0   "/>
-            </svg>
-            <div class="homeTxt">欢迎来到ProQuant</div>
-            <div class="homeTxt">获取第一手股票资讯</div>
-        </div>
-    </div>
-</div>
-
-<!--功能简介start-->
+<!--股票对比主要内容start-->
 <div>
-    <div id="funcIntro" style="text-align: center">
-        <div class="intro">
-            <img src="../images/market.svg">
-            <div class="introTitle">大盘数据</div>
-            <div class="introTxt">获取最新的市场信息</div>
-        </div>
-        <div class="introGap"></div>
-        <div class="intro">
-            <img src="../images/strategy.svg">
-            <div class="introTitle">使用策略</div>
-            <div class="introTxt">最大化提升投资收益</div>
-        </div>
-        <div class="introGap"></div>
-        <div class="intro">
-            <img src="../images/create.svg">
-            <div class="introTitle">创建策略</div>
-            <div class="introTxt">自定义定制量化策略</div>
-        </div>
-        <div class="introGap"></div>
-        <div class="intro">
-            <img src="../images/compare.svg">
-            <div class="introTitle">股票对比</div>
-            <div class="introTxt">全方位比较股票信息</div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-8">
+                <!--<div class="headLabel">股票对比</div>-->
+                <div>
+                    <div class="col-sm-4" style="padding-left:0;padding-right: 10px">
+                        <div class="headLabel">选择对比股票</div>
+                        <!--添加对比股票-->
+                        <div style="background-color: white;padding: 15px">
+                            <div class="centerAlignment">
+                                <label>添加对比：</label>
+                                <input type="text" id="searchTextField" placeholder="请输入股票名称或代码">
+                            </div>
+                            <div id="stockContainer">
+                                <div class="stockCard">
+                                    <span class="stockCardName">上海九百</span>
+                                    <button class="stockCardDelete"><i class="fa fa-times-circle" aria-hidden="true"></i></button>
+                                </div>
+                                <div class="stockCard">
+                                    <span class="stockCardName">包钢股份</span>
+                                    <button class="stockCardDelete"><i class="fa fa-times-circle" aria-hidden="true"></i></button>
+                                </div>
+                                <div class="stockCard">
+                                    <span class="stockCardName">工商银行</span>
+                                    <button class="stockCardDelete"><i class="fa fa-times-circle" aria-hidden="true"></i></button>
+                                </div>
+                            </div>
+
+                            <div class="centerAlignment" style="margin: 10px 0">
+                                <p class="yellow_word">提示：最多对比五只股票</p>
+                            </div>
+                            <div style="padding-left:8%; ">
+                                <button id="deleteAllButton">清空</button>
+                                <button id="compareButton">开始对比</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-8">
+                        <div class="headLabel">走势对比</div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-sm-2"></div>
         </div>
     </div>
 </div>
-<!--功能简介end-->
-
-<!--页脚start-->
-<div class="footer">
-    <div class="left-footer">
-        <div>
-            <h2>关于ProQuant</h2>
-            <br>
-            <p>ProQuant是一款基于提供股票市场情况展示，个股信息展示，股票各项指标预测功能于一体的多功能股票查询、
-                <br>分析的软件。</p>
-        </div>
-    </div>
-    <div class="right-footer">
-        <div>
-            <h2>关于我们</h2>
-            <br>
-            <p></p>
-        </div>
-        <div>
-            <a href="../images/myWEIBO."><img src="../images/weibo.png" alt="微博"></a>
-            <a href=""><img src="../images/weixin.png" alt="微信"></a>
-            <a href=""><img src="../images/qq.png" alt="QQ"></a>
-
-        </div>
-    </div>
-</div>
-<!--页脚end-->
-
+<!--股票对比主要内容end-->
 
 <!--登录弹出框start-->
 <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -251,20 +196,12 @@
 </div>
 <!--登录弹出框end-->
 
-<!--&lt;!&ndash;滑出提示框start&ndash;&gt;-->
-<!--<div id="sliderTip">-->
-<!--<div>-->
-<!--<span style="border-right: 2px solid #528FCC"><i class="fa fa-exclamation-circle fa-2x" aria-hidden="true"></i></span>-->
-<!--<span>提示消息</span>-->
-<!--</div>-->
-<!--</div>-->
-<!--&lt;!&ndash;滑出提示框end&ndash;&gt;-->
+<!--滑出提示框-->
 <div id="toaster_close">
     <div id="toaster">
         <div id="pic_div" class="green_pic"></div>
         <div id="remind" class="green_word">提示消息</div>
     </div>
 </div>
-
 </body>
 </html>
