--- a/ProQuant/ProQuant/src/main/webapp/pages/StockInfo.html
+++ b/ProQuant/ProQuant/src/main/webapp/pages/StockInfo.html
@@ -57,7 +57,73 @@
 <div id="stockInfo">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-2"></div>
+            <div class="col-sm-2" style="margin-top: 100px;padding-left: 100px">
+                <div class="headLabel" style="margin-right: -100px"><p>最近访问</p></div>
+                <div class="whiteBackground" style="margin-right: -100px;padding-bottom: 10px">
+                    <table class="table browseTable" style="margin-bottom: 10px">
+                        <thead>
+                            <tr>
+                                <th>股票名称</th>
+                                <th>最新价</th>
+                                <th>涨跌幅(%)</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td><a>华联超综</a></td>
+                                <td>6.55</td>
+                                <td>10.08</td>
+                            </tr>
+                            <tr>
+                                <td><a>上海九百</a></td>
+                                <td>12.60</td>
+                                <td>10.04</td>
+                            </tr>
+                            <tr>
+                                <td><a>青海华鼎</a></td>
+                                <td>9.66</td>
+                                <td>10.02</td>
+                            </tr>
+                            <tr>
+                                <td><a>晶瑞股份</a></td>
+                                <td>14.60</td>
+                                <td>10.02</td>
+                            </tr>
+                            <tr>
+                                <td><a>展鹏科技</a></td>
+                                <td>26.04</td>
+                                <td>10.01</td>
+                            </tr>
+                            <tr>
+                                <td><a>杭州解百</a></td>
+                                <td>9.34</td>
+                                <td>10.01</td>
+                            </tr>
+                            <tr>
+                                <td><a>顶点软件</a></td>
+                                <td>44.18</td>
+                                <td>10.01</td>
+                            </tr>
+                            <tr>
+                                <td><a>正海生物</a></td>
+                                <td>39.81</td>
+                                <td>10.00</td>
+                            </tr>
+                            <tr>
+                                <td><a>中兴商业</a></td>
+                                <td>11.90</td>
+                                <td>5.40</td>
+                            </tr>
+                            <tr>
+                                <td><a>徐家汇</a></td>
+                                <td>13.06</td>
+                                <td>5.15</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <div style="text-align: center"><button id="deleteBrowseButton">清空浏览记录</button></div>
+                </div>
+            </div>
             <div class="col-sm-8" style="padding: 100px">
                 <!--股票基本信息start-->
                 <div id="basicInfo" style="margin-bottom: 40px">
@@ -370,11 +436,36 @@
                 <div class="headLabel"><p>公司简介</p></div>
                 <div style="background-color: white;padding: 10px">
                     <div>
-                        <p><span style="font-size: 18px;font-weight: bold">简介：</span>2001年11月13日,公司前身杭州园林设计院有限公司成立。 2011年2月12日,公司名称由杭州园林设计院有限公司变更为杭州园林设计院股份有限公司。</p>
+                        <p><span class="companyIntro">公司名称：</span>杭州园林设计院股份有限公司</p>
                     </div>
                     <br>
                     <div>
-                        <p><span style="font-size: 18px;font-weight: bold">业务：</span>从事风景园林设计行业。</p>
+                        <p><span class="companyIntro">英文名称：</span>Hangzhou Landscape Architecture Design Institute Co., Ltd.</p>
+                    </div>
+                    <br>
+                    <div>
+                        <p><span class="companyIntro">所属行业：</span>建筑材料 — 建筑装饰</p>
+                    </div>
+                    <br>
+                    <div>
+                        <p><span class="companyIntro">公司网址：</span><a href="http://www.hzyly.com" style="cursor: hand">www.hzyly.com</a></p>
+                    </div>
+                    <br>
+                    <div>
+                        <p><span class="companyIntro">办公地址：</span>浙江省杭州市西湖区杨公堤32号</p>
+                    </div>
+                    <br>
+                    <br>
+                    <div>
+                        <p><span class="companyIntro">业务：</span>从事风景园林设计行业。</p>
+                    </div>
+                    <br>
+                    <div>
+                        <p><span class="companyIntro">简介：</span>2001年11月13日,公司前身杭州园林设计院有限公司成立。 2011年2月12日,公司名称由杭州园林设计院有限公司变更为杭州园林设计院股份有限公司。</p>
+                    </div>
+                    <br>
+                    <div>
+                        <p><span class="companyIntro"></span></p>
                     </div>
                 </div>
             </div>
